--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,4 +1,7 @@
 .header {
 	background-image: url("../../img/bg-back-mobile@1x.jpg");
 	background-repeat: no-repeat;
+	
+	color: red;
+	font-size: 20px;
 }
